# grok-cli

./: .env  Cargo.toml  README.md
src/: app.rs  grok.rs  main.rs
